syntax = "proto3";

option csharp_namespace = "EvMa.ECommerceLibrary.Grpc.Protos";

package catalog_service;

message GrpcImage {
	string id = 1;
	string url = 2;
	string alt_text = 3;
	int32 order = 4;
}